# globjects

./: AUTHORS
data/arcsynthesis/chapter1/tutorial2/: frag-position.frag  vertex-colors-further-studies.frag
data/arcsynthesis/chapter2/: frag-position.frag
data/arcsynthesis/chapter3/: calc-color-further-studies.frag  frag-position-further-studies.frag  vert-calc-offset-further-studies.frag  vert-calc-offset-further-studies.vert  vert-calc-offset.vert  vert-position-offset.vert
data/arcsynthesis/chapter4/: arbitrary-perspective-plane-further-studies.vert  matrix-perspective.vert  ortho-cube.vert  shader-perspective.vert
examples/: CMakeLists.txt
examples/arcsynthesis/: CMakeLists.txt
examples/arcsynthesis/chapter1/: CMakeLists.txt  further-studies.cpp  main.cpp
examples/arcsynthesis/chapter1/tutorial1/: CMakeLists.txt  further-studies.cpp  main.cpp
examples/arcsynthesis/chapter1/tutorial2/: CMakeLists.txt  FragPosition-FurtherStudies.cpp  FragPosition.cpp  VertexColors-FurtherStudies.cpp  VertexColors.cpp  further-studies.cpp  main.cpp
examples/arcsynthesis/chapter2/: CMakeLists.txt  FragPosition-FurtherStudies.cpp  FragPosition.cpp  VertexColors-FurtherStudies.cpp  VertexColors.cpp
examples/arcsynthesis/chapter3/: CMakeLists.txt  CPUPositionOffset.cpp  FragChangeColor-FurtherStudies.cpp  FragChangeColor.cpp  FragPosition-FurtherStudies.cpp  VertCalcOffset.cpp  VertPositionOffset.cpp
examples/arcsynthesis/chapter4/: CMakeLists.txt  OrthoCube.cpp  ShaderPerspective.cpp
include/glow/: Object.h  Referenced.h
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/bindless-textures/: main.cpp
source/examples/computeshader/: main.cpp
source/examples/gbuffers/: main.cpp
source/examples/gpu-particles/: ComputeShaderParticles.cpp  FragmentShaderParticles.cpp  TransformFeedbackParticles.cpp
source/examples/lines/: CMakeLists.txt  main.cpp
source/examples/mipmap-filtering/: main.cpp
source/examples/post-processing/: main.cpp
source/examples/shaderincludes/: main.cpp
source/examples/simple-transformfeedback/: main.cpp
source/examples/sparse-texture/: main.cpp
source/examples/ssbo/: main.cpp
source/examples/tessellation/: main.cpp
source/examples/transparency/: ABufferAlgorithm.cpp  GlBlendAlgorithm.cpp  HybridAlgorithm.cpp  WeightedAverageAlgorithm.cpp  main.cpp
source/examples/vertexarrayattributes/: main.cpp
source/glow/include/glow/: Buffer.h  Object.h  Query.h  Referenced.h  TransformFeedback.h
source/glow/source/: DebugInfo.cpp  Error.cpp  FrameBufferObject.cpp  Program.cpp  Shader.cpp  State.cpp  glow.cpp  pixelformat.cpp
source/glowutils/source/: CameraPathPlayer.cpp  Icosahedron.cpp
source/tutorial/: CMakeLists.txt
source/tutorial/arcsynthesis/chapter1/: CMakeLists.txt  further-studies.cpp  main.cpp
source/tutorial/arcsynthesis/chapter2/: CMakeLists.txt  FragPosition-FurtherStudies.cpp  FragPosition.cpp  VertexColors-FurtherStudies.cpp  VertexColors.cpp
source/tutorial/arcsynthesis/chapter3/: CMakeLists.txt  CPUPositionOffset.cpp  FragChangeColor-FurtherStudies.cpp  FragChangeColor.cpp  FragPosition-FurtherStudies.cpp  VertCalcOffset-FurtherStudies.cpp  VertCalcOffset.cpp  VertPositionOffset.cpp
source/tutorial/arcsynthesis/chapter4/: ArbitraryPerspectivePlane-FurtherStudies.cpp  AspectRatio.cpp  CMakeLists.txt  FrustumScale-FurtherStudies.cpp  MatrixPerspective.cpp  OrthoCube.cpp  ShaderPerspective.cpp  ZfarZnear-FurtherStudies.cpp
